added color palette

--- a/index.html
+++ b/index.html
@@ -53,6 +53,14 @@
             <img id="placeholder-img" src="./lightbulb.png">
             <p id="placeholder-text">Notes you add appear here</p>
         </div>
+        <div id="color-tool">
+            <div class="color-option" data-color="rgb(211, 35, 35)" id="red"></div>
+            <div class="color-option" data-color="white" id="white"></div>
+            <div class="color-option" data-color="rgb(204, 16, 204)" id="purple"></div>
+            <div class="color-option" data-color="green" id="green"></div>
+            <div class="color-option" data-color="rgb(82, 82, 244)" id="blue"></div>
+            <div class="color-option" data-color="yellow" id="yellow"></div>
+        </div>
     </main>
     <script src="app.js"></script>
 </body>
