added char limit

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
     <div class="modal">
         <div class="modal-content">
             <input type="text" placeholder="Title" class="modal-title">
-            <input type="text" placeholder="Take a note..." class="modal-text">
+            <!-- <input type="text" placeholder="Take a note..." class="modal-text"> -->
+            <textarea type="text" class="modal-text" placeholder="Take a note..."></textarea>
             <span class="modal-close">Close</span>
         </div>
     </div>
