--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             <p id="placeholder-text">Notes you add appear here</p>
         </div>
         <div id="color-tool">
+            <div class="color-option" data-color="rgb(120, 255, 1 )" id="neon"></div>
             <div class="color-option" data-color="rgb(211, 35, 35)" id="red"></div>
             <div class="color-option" data-color="white" id="white"></div>
             <div class="color-option" data-color="rgb(204, 16, 204)" id="purple"></div>
