Added dark theme functionality

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Google+Sans:400,500&display=swap"></link>
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-
     <title>iKeep</title>
 </head>
 <body>
@@ -98,5 +97,6 @@
         </div>
     </main>
     <script src="app.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
